refactor Reg